objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>S_0_2_Status__c</fullName>
        <formula>IF(IsWon,
IF (Max_Stage_Achieved__c &lt;= 0.1,&quot;Won&quot;,&quot;Replied&quot;),

IF( S_Disqual_No_Contact__c ,&quot;Disqual @ S0&quot;,

IF(Max_Stage_Achieved__c &gt;= 0.2, &quot;Replied&quot;,&quot;No Reply&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S-0.2 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Motion__c</fullName>
        <label>Deal Motion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top-Down</fullName>
                </value>
                <value>
                    <fullName>Bottom-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>True_Up_Date__c</fullName>
        <label>True Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activities_7d__c</fullName>
        <description>Number of activities logged first 7 days</description>
        <inlineHelpText>Number of activities logged first 7 days</inlineHelpText>
        <label># Activities - 7d</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Source__c</fullName>
        <label>Budget Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Analytics/Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Name__c</fullName>
        <formula>ChampionContact__r.FirstName &amp; &quot; &quot; &amp; ChampionContact__r.LastName</formula>
        <label>Champion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>if(
and(ISPICKVAL( StageName ,&quot;Closed Won&quot;),ISBLANK(Date_Self_Service_Subscribed__c)), &quot;Manual Contract&quot;,
if(
and(ISPICKVAL( StageName ,&quot;Closed Won&quot;),not(ISBLANK(Date_Self_Service_Subscribed__c))), &quot;Stripe Subscription&quot;, &quot;Not Closed&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <inlineHelpText>How would the customer describe the current situation?</inlineHelpText>
        <label>Current State</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Effective_ARR__c</fullName>
        <description>Effective ARR captures the total ARR that a customer has/had at the time the opp closed won. This allows us to easily report on Avg. ARR of opportunities that have built-in uplifts. This field is still in testing and is manually populated.</description>
        <label>Effective ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MEDDICC_Score__c</fullName>
        <formula>(
IF(IsPickVal(Metrics_Score__c,&quot;&quot;),0,  Value( Text(Metrics_Score__c))) +
IF(IsPickVal(Economic_Buyer_Score__c,&quot;&quot;),0,  Value( Text(Economic_Buyer_Score__c))) +
IF(IsPickVal(Decision_Criteria_Score__c ,&quot;&quot;),0,  Value( Text(Decision_Criteria_Score__c ))) +
IF(IsPickVal(Decision_Process_Score__c,&quot;&quot;),0,  Value( Text(Decision_Process_Score__c))) +
IF(IsPickVal(Identify_Pain_Score__c,&quot;&quot;),0,  Value( Text(Identify_Pain_Score__c))) +
IF(IsPickVal(Champion_Score__c,&quot;&quot;),0,  Value( Text(Champion_Score__c))) +
IF(IsPickVal(Competition_Score__c,&quot;&quot;),0,  Value( Text(Competition_Score__c))) 

)
/ 

14 * 100</formula>
        <inlineHelpText>100 Point Scale
79-100: Strong
43-78: Moderate
0-42: Weak</inlineHelpText>
        <label>MEDDICC Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metrics_Score__c</fullName>
        <inlineHelpText>0-Seller has not identified any relevant metrics and cannot articulate where we have solved similar issues before
1-Seller has identified very few metrics that provide limited relevance to the current customer
2-Seller has identified several metrics which are highly relevant to 
customer’s issues and pains&quot;</inlineHelpText>
        <label>Metrics Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MEDDICC_Score</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>TEXT(Owner.Owner_Manager__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Intel__c</fullName>
        <label>Partner Intel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gainsight</fullName>
                </value>
                <value>
                    <fullName>Amplitude</fullName>
                </value>
                <value>
                    <fullName>Mixpanel</fullName>
                </value>
                <value>
                    <fullName>Gong</fullName>
                </value>
                <value>
                    <fullName>FullStory</fullName>
                </value>
                <value>
                    <fullName>Intercom</fullName>
                </value>
                <value>
                    <fullName>UserTesting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>AWS Marketplace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Views__c</fullName>
        <label>Private Views</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PB_ID__c</fullName>
        <formula>Project__r.Project_PB_ID__c</formula>
        <inlineHelpText>lookup to project PB ID</inlineHelpText>
        <label>Project PB ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Touched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Opportunity was touched by sales - i.e. if the stage got higher than 0.2. DM Scheduled</description>
        <label>Sales Touched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <inlineHelpText>Document adjustments to the Order Form that are not standard. (Non standard payments, billing requirements, etc)</inlineHelpText>
        <label>Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Numeric__c</fullName>
        <formula>if( ISPICKVAL(StageName, &quot;Free Trial&quot;),0.0,
if( IsWon,6,
if( IsClosed,-1.0,
value(left(text( StageName ),3)))))


/*

case( 
text(StageName), 
&quot;Free Trial&quot;,0.1, 
&quot;Closed Won&quot;,6, 
&quot;Closed Lost&quot;,7, 
&quot;Trial Expired&quot;,7, 
value(left(text( StageName ),3)) 
) 


if( ISPICKVAL(Stage, text_literal) 

0.0 Sales Routed
0.1 Qualifying
0.2 DM Scheduled
1.0 Identify
2.0 Consult
3.0 Prove
4.0 Consensus
5.0 Contracting

*/</formula>
        <label>Stage (#)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Makers__c</fullName>
        <inlineHelpText>Range of Makers supplied in Trial Survey</inlineHelpText>
        <label>Survey Makers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_IsClosed__c</fullName>
        <formula>IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp_IsClosed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Logic_NB__c</fullName>
        <formula>AND(
Same_Owner_Opp_and_Account__c = FALSE,
   Account.OwnerId &lt;&gt; &quot;005f4000000qlhv&quot;,
CreatedDate &gt;= (NOW()-5)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp Logic (NB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Not_Null__c</fullName>
        <formula>Opportunity_Date_Assigned__c &lt;&gt; null</formula>
        <label>Test Not Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Won_ARR_Sales__c</fullName>
        <formula>IF( IsPickVal(Type ,&quot;Renewal&quot;),null,
IF( IsWon, ARR__c * Min( Max_Stage_Achieved__c ,1),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Credited won ARR</inlineHelpText>
        <label>Won ARR - Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>num_of_PMs_UX__c</fullName>
        <inlineHelpText>How many makers they want to purchase in this opportunity</inlineHelpText>
        <label>Scope of Opp - # of Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARR_at_Stage_2__c</fullName>
        <inlineHelpText>ARR At Stage 2, for SDR ARR Credit</inlineHelpText>
        <label>ARR at Stage 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <inlineHelpText>Standard - customer signed our standard MSA without redlines
Custom - signed our MSA with changes or used 3rd party paper
Document details in Special Terms field</inlineHelpText>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amendment_Type__c</fullName>
        <label>Amendment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Amendment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>Multi-sided marketplace</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Score__c</fullName>
        <inlineHelpText>0-Seller has not identified a credible Champion
1-Seller has identified and tested at  least 1 Champion within the organization but has not established a wider base
2-Seller has identified and tested  several Champions and has multiple  points of support across the  
customer’s organization</inlineHelpText>
        <label>Champion Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MEDDICC_Score</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Title__c</fullName>
        <formula>ChampionContact__r.Title</formula>
        <label>Champion Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chorus_Tracker__c</fullName>
        <label>Chorus Tracker</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Columns__c</fullName>
        <label>Custom Columns</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <inlineHelpText>Who is and how do you identify and gain access to the Economic Buyer?</inlineHelpText>
        <label>Economic Buyer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Onboarding product is associated to this deal</inlineHelpText>
        <label>Has Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Transfers__c</fullName>
        <label>Open Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_Groups__c</fullName>
        <label>Release Groups</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Closed_Sales__c</fullName>
        <formula>Max_Stage_Achieved__c &gt;= 1 &amp;&amp;  IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S-Closed-Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Engineer that is assigned to this deal</inlineHelpText>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Holdback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunity held back from territory transition until Holdback Expiration Date.</inlineHelpText>
        <label>Sales Holdback Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Stack_CRM__c</fullName>
        <description>Tools in use by customer facing teams for CRM</description>
        <inlineHelpText>Tools in use by customer facing teams for CRM</inlineHelpText>
        <label>Tech Stack (CRM)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tech_Stack_CRM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Win_Reason__c</fullName>
        <inlineHelpText>The number one reason they chose Productboard</inlineHelpText>
        <label>Top Win Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High feature fit</fullName>
                </value>
                <value>
                    <fullName>Bargain price</fullName>
                </value>
                <value>
                    <fullName>Beat competitor propositions</fullName>
                </value>
                <value>
                    <fullName>Highly motivated buyer</fullName>
                </value>
                <value>
                    <fullName>Excellent sales skill</fullName>
                </value>
                <value>
                    <fullName>Confident social proof</fullName>
                </value>
                <value>
                    <fullName>Positive brand affinity</fullName>
                </value>
                <value>
                    <fullName>Solves existing internal pain points</fullName>
                </value>
                <value>
                    <fullName>No single reason</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <formula>If( IsPickVal(Type ,&quot;New Business&quot;) &amp;&amp;  Not(Contains(Project__r.Name ,&quot;Placeholder&quot;)), Project__r.Trial_End_Date__c ,Null)</formula>
        <inlineHelpText>Lookup to Project Trial End Date for New Business Opportunities (Excludes Placeholder Project)</inlineHelpText>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_helped_you__c</fullName>
        <inlineHelpText>Shoutouts to the team!</inlineHelpText>
        <label>Who helped you?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Country (from Account Billing Address)</description>
        <formula>Account.BillingCountry</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Funding__c</fullName>
        <formula>if(Account.Raised__c &gt; 0,
Account.Raised__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ID_Long__c</fullName>
        <formula>Account.ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account ID (18 Digit)</inlineHelpText>
        <label>Account ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>if( Account.Website = &quot;&quot;,&quot;&quot;,Account.Website)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Sales/Renewal Ops Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <isActive>false</isActive>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                    <isActive>false</isActive>
                    <label>In Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to_SDR__c</fullName>
        <formula>Not(IsBLank(TS_Assigned_to_SDR__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to SDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>AP/Billing Contact for this customer</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChampionContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <description>Field that captured the role of the person who created the opp. Used to drive automation around Opportunity Source. Populated with Process Builder.</description>
        <label>Created By Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Team__c</fullName>
        <formula>Text(CreatedBy.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed_won__c</fullName>
        <description>Date when the opp was closed/won.</description>
        <label>Date Closed/won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Cycle_Type__c</fullName>
        <label>Deal Cycle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Concept</fullName>
                </value>
                <value>
                    <fullName>Quick Close</fullName>
                </value>
                <value>
                    <fullName>Extended Trial</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Managed Trial</fullName>
                </value>
                <value>
                    <fullName>Customized demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_On_Premise__c</fullName>
        <label>Jira On-Premise</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Date__c</fullName>
        <inlineHelpText>Date was routed by LeanData, updated by process builder after LD Final Routing Action is Updated</inlineHelpText>
        <label>LD Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MRR_Hidden_Copy__c</fullName>
        <description>Amin only visible temp field to change MRR calculation</description>
        <formula>IF( Price_Book__c = &apos;monthly&apos;, Amount,  Amount/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amin only visible temp field to change MRR calculation</inlineHelpText>
        <label>MRR Hidden Copy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Stage_w_Won__c</fullName>
        <formula>if(IsWon,6,
If(Max_Stage_Achieved__c &gt; 0, Max_Stage_Achieved__c,

If(IsClosed,

Case(Text(Loss_Reason__c),
&quot;Does not meet ICP&quot;,-1,
&quot;Duplicate account_opportunity&quot;,-1,
&quot;Sales declined&quot;,-1,
&quot;Out of Business/Acquired&quot;,-1,

IF(ISPICKVAL( Trial_Loss_Reason__c,&quot;&quot;),0,-1)),Max_Stage_Achieved__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Max stage reached overall, including won stage</inlineHelpText>
        <label>Max Stage w Won</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Territory__c</fullName>
        <formula>Text(Owner.Territory__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_Long__c</fullName>
        <formula>CASESAFEID( Project__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Process__c</fullName>
        <label>Renewal Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Renewal</fullName>
                </value>
                <value>
                    <fullName>New Contract</fullName>
                </value>
                <value>
                    <fullName>Written Confirmation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevOps_Deal_URL__c</fullName>
        <label>[RevOps] - Deal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Routed_to_Sales__c</fullName>
        <formula>NOT(ISBLANK(Final_Sales_Owner_Team__c ))</formula>
        <label>Routed to Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Segment__c</fullName>
        <inlineHelpText>The segment at the time of LeanData Routing
Sales Team: S=Solution &amp; V=Velocity
MK Segment: 1=very good, 2=good, 3=medium
X-4: Self-service (low-quality leads)</inlineHelpText>
        <label>LD Routing Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Routing_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Closed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Closed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_AM_Team__c</fullName>
        <formula>If( Contains(Final_Sales_Owner_Team__c, &quot;AM-&quot;),&quot;AM&quot;,
 IF( Account.Suggested_Segmentation_employees__c = &quot;Unknown&quot;, &quot;ESB&quot;,Account.Suggested_Segmentation_employees__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment + AM Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Manager__c</fullName>
        <formula>Account.Success_Manager__r.Full_Name__c</formula>
        <label>Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Deal__c</fullName>
        <inlineHelpText>Level of Urgency for Legal to review (MSA, DPA, MNDA)</inlineHelpText>
        <label>Urgency of Deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closing This Week</fullName>
                </value>
                <value>
                    <fullName>Closing End of Month</fullName>
                </value>
                <value>
                    <fullName>Not Closing End of Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcceptedOffering__c</fullName>
        <inlineHelpText>Special price/offer accepted at the end of the deal cycle.</inlineHelpText>
        <label>Accepted Offering Q2 FY20</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Special_Offering_Q2_FY20</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Employee__c</fullName>
        <formula>Account.Max_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Test_Field__c</fullName>
        <label>Admin Test Field</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Captured_Charges__c</fullName>
        <label>Captured Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Won_Credit__c</fullName>
        <formula>if(IsWon, 
IF(IsBlank(Date_Self_Service_Subscribed__c), &quot;Sales&quot;,
Case(  Final_Sales_Owner_Team__c ,
&quot;Sales_AE_Velocity&quot;, IF( Max_Stage_Achieved__c &lt; 1, &quot;SS&quot;, &quot;Sales&quot;),
&quot;Sales_AE_Solution&quot;,&quot;SS&quot;,
&quot;SS&quot;)), &quot;&quot;)


/*
if(and( IsWon ,Max_Stage_Achieved__c &lt;1),&quot;Self Service&quot;, 
   IF( Contains(Owner.UserRole.Name ,&quot;Sales&quot;), IF(IsClosed,&quot;Lost-Sales&quot;,&quot;Open-Sales&quot;),


IF(IsClosed,&quot;Lost-SS&quot;,&quot;Open-NonSales&quot;)

))) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedWon Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Notes__c</fullName>
        <inlineHelpText>Win Story</inlineHelpText>
        <label>Closed Won Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_Creat_to_S2__c</fullName>
        <formula>IF(  IsNull(Date_Transferred_to_2_0__c ),null,
Max(0,Date_Transferred_to_2_0__c - Datevalue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Creat to S2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <inlineHelpText>Do we understand the specific steps the customer will take to evaluate, select, and approve, and purchase a solution</inlineHelpText>
        <label>Decision Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Scope__c</fullName>
        <label>Engagement Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Engagement_Scope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Integration__c</fullName>
        <label>Jira Integration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Notes__c</fullName>
        <inlineHelpText>Tracking LeadData routing details</inlineHelpText>
        <label>LD Routing Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason_Long__c</fullName>
        <inlineHelpText>Why wasn&apos;t PB the right solution? Any noted feature gaps?</inlineHelpText>
        <label>Loss Reason - Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Contributors__c</fullName>
        <label>Max Contributors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Portals__c</fullName>
        <label>Multiple Portals</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Activity__c</fullName>
        <label>Partner Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Advocacy</fullName>
                </value>
                <value>
                    <fullName>Partner Workshop</fullName>
                </value>
                <value>
                    <fullName>Partner Marketing</fullName>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Maturity__c</fullName>
        <description>Old field not in use</description>
        <label>Product Maturity OLD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Maturity</valueSetName>
        </valueSet>
    </fields>
</CustomObject>